<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lumi_dos.lge.IntranetFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/intranet_image_height"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:contentDescription="@string/images_from_intranet"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/progressBar"/>

    <ImageButton
        android:layout_width="@dimen/intranet_button_width"
        android:layout_height="@dimen/intranet_button_height"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/intranet_button_height"
        android:layout_marginStart="@dimen/intranet_button_height"
        android:layout_marginTop="@dimen/intranet_button_height"
        android:background="@color/colorPrimary"
        android:src="@drawable/intranet_back_button"
        android:id="@+id/intranetBackButton"
        android:contentDescription="@string/previous_slide_button" />

    <ImageButton
        android:layout_width="@dimen/intranet_button_width"
        android:layout_height="@dimen/intranet_button_height"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/intranet_button_height"
        android:layout_marginEnd="@dimen/intranet_button_height"
        android:layout_marginTop="@dimen/intranet_button_height"
        android:background="@color/colorPrimary"
        android:src="@drawable/intranet_next_button"
        android:id="@+id/intranetNextButton"
        android:contentDescription="@string/next_slide_button" />

</RelativeLayout>
